# utmist-ml-seed

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  story.yml  task.yml
.github/workflows/: ci.yml
app/: README.md  app.py
checkpoints/: README.md
colab/: README.md  setup.ipynb
configs/: README.md  config.yaml
configs/dataset/: cifar10.yaml  custom.yaml
configs/experiment/: long_run.yaml
configs/model/: transformer.yaml  yolo_v8.yaml
data/: README.md
docker/: Dockerfile  README.md  docker-compose.yml
logs/: README.md
notebooks/: README.md  exploration.ipynb
outputs/: README.md
results/: README.md
src/: README.md  data.py  evaluate.py  models.py  train.py  utils.py
tests/: README.md  test_smoke.py
