[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utmist-ml-seed"
version = "0.1.0"
description = "UTMIST ML project seed — Hydra-driven experiment launcher"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "seaborn>=0.13",
    "tensorboard>=2.15",
    "wandb>=0.16",
    "openpyxl>=3.1",
    "h5py>=3.10",
    "huggingface-hub>=0.21",
]
cv = [
    "opencv-python>=4.9",
    "albumentations>=1.3",
    "ultralytics>=8.1",
    "Pillow>=10.2",
    "timm>=0.9",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
]
all = [
    "utmist-ml-seed[ml,cv,dev]",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
